# amdgpud

./: Cargo.toml
crates/amdfan/: Cargo.toml
crates/amdfand/: Cargo.toml
crates/amdfand/src/: main.rs  service.rs
crates/amdgpu/: Cargo.toml
crates/amdgui/: Cargo.toml
crates/amdgui-helper/: Cargo.toml
crates/amdgui-helper/src/: main.rs
crates/amdgui/src/: lib.rs
crates/amdgui/src/widgets/: cooling_performance.rs
crates/amdguid-glium/: Cargo.toml
crates/amdguid-glium/src/: backend.rs
crates/amdguid-glow/: Cargo.toml
crates/amdguid-glow/src/: backend.rs  main.rs
crates/amdguid-wayland/: Cargo.toml
crates/amdmond/: Cargo.toml
crates/amdmond/src/: log_file.rs  main.rs
crates/amdportsd/: Cargo.toml
crates/amdportsd/src/: main.rs
crates/amdvold/: Cargo.toml
examples/: verbose_config.toml
